--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,3 +50,11 @@ jobs:
     # 4. Build via Maven 
     - name: Build via Maven
       run: mvn verify -B --file pom.xml -DdisableXmlReport=true
+    - name: 上传文件
+      uses: actions/upload-artifact@v1
+
+      with:
+
+        name: 生成的文件
+
+        path: ${{ github.workspace }}/build/libs/
